- Fix HTML validation errors in design doc

--- a/design_docs/P4_testing.html
+++ b/design_docs/P4_testing.html
@@ -29,16 +29,16 @@
         To test the website we used live testing.
       </p>
       <p>
-          Here is the questions we asked the testers:
+          Here are the questions we asked the testers:
+      </p>
           <ol>
               <li>When is the next concert?</li>
-              <li>What does the band’s studio look like?</li>
+              <li>What does the band's studio look like?</li>
               <li>Can you find their Facebook page?</li>
               <li>Can you leave a message for the band?</li>
               <li>What is the name of their first album?</li>
               <li>Are there any information that you think are missing from the website?</li>
           </ol>
-      </p>
     </section>
 
     <section>
@@ -67,6 +67,7 @@
       <p>
         Generally we have gotten positive feedback on our website from the testers. They think the design is really nice.
         To make it easy we have written some of the responses on the questions we asked here.
+      </p>
         <ol>
             <li><strong>When is the next concert?</strong>
             <p>All testers thought this was easy and found the next concert on their first attempt.</p></li>
@@ -85,7 +86,6 @@
             <li><strong>Are there any information that you think are missing from the website?</strong>
             <p>One of the testers missed information that explicitly tells that Excellence is a band.</p></li>
         </ol>
-      </p>
     </section>
 
     <section>
