added small dropdown

--- a/website/index.html
+++ b/website/index.html
@@ -86,6 +86,7 @@
             <a onclick="quickLoad('about')">About Excellence</a>
             <a onclick="quickLoad('faq')">FAQ</a>
             <a onclick="quickLoad('discography')">Discography</a>
+            <a onclick="quickLoad('tourdate')">Concerts</a>
         </div>
     </div>
   </nav>
