added to the test doc

--- a/design_docs/P4_testing.html
+++ b/design_docs/P4_testing.html
@@ -84,7 +84,9 @@
             First they tried to found Excellence first album under “About Excellence”, and when they couldn’t find
             it here they just searched around on the web page and found it under “Discography” by an accident.</p></li>
             <li><strong>Are there any information that you think are missing from the website?</strong>
-            <p>One of the testers missed information that explicitly tells that Excellence is a band.</p></li>
+            <p>One of the testers missed information that explicitly tells that Excellence is a band. One of the other testers asks
+            for a link in the faq to the guestbook, so that if the question they are searching for is not in the faq they know
+            a place to ask.   </p></li>
         </ol>
     </section>
 
@@ -98,6 +100,16 @@
         from “Discography” to “Music” or “Albums” to make it more user friendly for people who is not that
         familiar with music terminology.
       </p>
+      <p>
+        We can also implement the functions that our testers were missing. Maybe we can add some more text on the
+        home page so that it is clearer that this is a website for a band when you are entering. Now it's mostly
+        the picture and the text "We play music" that give this information, but we add a few sentences about
+        the band here it will be even clearer. We can also implement the link in the faq to the guestbook to make the website
+        even more user friendly.
+      </p>
+      <p>All these small changes and are quick and easy to implement.</p>
+
+
     </section>
 
     <section>
